# MatchMentor

./: .gitignore  MatchMentor.py  analysis.py  databasetest.py  flask_app.py  hashcheck.py  labelsdatabase.py  overallanalysis.py  pyproject.toml
Database/: FootballDatabase.sql
HTML/: homepage.html  landing.html  login.html  register.html
cnn-lstm/: cnn-lstm.ipynb
cnn_lstm/: cnn_lstm.ipynb  cnn_lstm.py  run_optuna_study.slurm  triggered_training.py
notebooks/: example_database.ipynb  example_labeling_notebook.ipynb  example_model_training.ipynb  labeling_notebook.ipynb  model_inference.ipynb  model_training.ipynb
static/: TestLabelsCSV.csv  TestLabelsFullCSV.csv
static/css/homepage/: homepage.css
static/css/labelling/: labelling.css
static/css/landing/: landing.css
static/css/login/: login.css
static/css/overallstats/: overallstats.css
static/css/register/: register.css
static/css/stats/: stats.css
templates/: homepage.html  labelling.html  landing.html  login.html  overallstats.html  register.html  stats.html  test_flask_ajax.html
