[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MatchMentor"
version = "0.2.0"
readme = "readme.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Karin Haddon", email="karinlhaddon@gmail.com"},
    {name="Jai Bhagat", email="jkbhagatio@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "build",
    "dotmap",
    "graphviz",
    "ipdb",
    "ipykernel",
    "isort",
    "jaxtyping",
    "jupyter",
    "jupyterlab",
    "flask",
    "matplotlib",
    "myst-parser",
    "numpy<2",
    "opencv-python",
    "optuna",
    "plotly",
    "pre-commit",
    "PyQt5",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-sphinx",
    "ruff",
    "scikit-learn",
    "scipy",
    "seaborn",
    "setuptools",
    "submitit",
    "torch @ https://download.pytorch.org/whl/cu121/torch-2.5.1%2Bcu121-cp311-cp311-win_amd64.whl",  # windows
    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.20.1%2Bcu121-cp311-cp311-win_amd64.whl",  # windows
    #"torch @ https://download.pytorch.org/whl/cu121/torch-2.5.1%2Bcu121-cp311-cp311-linux_x86_64.whl",  # linux
    #"torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.20.1%2Bcu121-cp311-cp311-linux_x86_64.whl",  # linux
    "tqdm",
    "twine>=1.11.0",
    "wandb",
    "wheel",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/KarinHaddon/MatchMentor"
Repository = "https://github.com/KarinHaddon/MatchMentor"

[project.optional-dependencies]
dev = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
MatchMentor = ["py.typed"]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*",
    "data"
]

[tool.setuptools.dynamic]
version = {attr = "MatchMenttor.version.VERSION"}

[tool.pip]
extra-index-url = [
    "https://pypi.org/simple",
    "https://my-custom-index-url.com/simple"
]

[tool.isort]
profile = "black"
multi_line_output = 2

[tool.ruff]
select = ["E", "W", "F", "I", "D", "UP", "S", "B", "A", "C4", "ICN", "PIE", "PT", "SIM", "PL"]
line-length = 99
ignore = [
    "E201", "E202", "E203", "E231", "E731", "E702",
    "D107",
    "F722",
    "PLR0912", "PLR0913", "PLR0915",
    "PT013",
    "S101",
]
extend-exclude = [".git", ".github", ".idea", ".vscode"]
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pyright]
reportMissingImports = "none"
reportImportCycles = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedfunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportPrivateUsage = "error"
reportCallInDefaultInitializer = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecesaryCast = "error"
reportUnnecesarryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportUnusedExpression = "error"
reportMatchNotExhaustive = "error"
reportShadowedImports = "error"
# *Note*: we may want to set all 'ReportOptional*' rules to "none", but leaving 'em default for now
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
